# FolderSync

./: CMakeLists.txt  Directory.h  Duration.h  File.h  Folder.cpp  Folder.h  FolderSync.sln  SyncFolder.cpp  SyncFolder.h  main.cpp
FolderSync/: Duration.h  FolderSync.vcxproj  FolderSync.vcxproj.filters  Main.cpp  settings.cfg
